@@ -64,7 +64,7 @@ SysStaff::~SysStaff()
       foreach(Bracket* b, brackets)
             delete b;
       brackets.clear();
-      delete instrumentName;
+      //delete instrumentName;
       instrumentName = 0;
       }
 
@@ -481,7 +481,7 @@ void System::setInstrumentName(int staffIdx)
       if (!iname) {
             Part* part = s->part();
             iname = new TextC(_firstSystem ? (*part->longName()) : (*part->shortName()));
-            iname->setSelectable(false);
+            iname->setMovable(false);
             staff->instrumentName = iname;
             }
       else {
