@@ -1,3 +1,6 @@
+11.jun (la)
+      - Restore ability to delete instrument name in place
+      - Right click on instrument name for staff properties
 10.jun (la)
       - update musescore.com plugin
       - remove "what's this" in toolbar and help menu
